--- a/MyConference/www/templates/event.html
+++ b/MyConference/www/templates/event.html
@@ -15,24 +15,53 @@ root directory along with this program.
 If not, see http://www.gnu.org/licenses/agpl-3.0.html.
 -->
 <ion-view>
-  <ion-nav-title>{{event.title}}</ion-nav-title>
   <ion-content>
+  <ion-nav-title>{{event.title}}</ion-nav-title>
     <ion-list class="bar-stable">
-      <ion-item class="item item-icon-left"><i class="icon ion-clock"></i> {{(event.date | date: 'dd MMM yyyy') || "t.b.a"}} </ion-item>
+      <ion-item class="item item-icon-left"><i class="icon ion-clock"></i>: {{(event.date | date: 'dd MMM yyyy') || "t.b.a"}} </ion-item>
       <ion-item class="item item-icon-left"> <i class="icon ion-map"></i>: {{event.location || "t.b.a"}}</ion-item>
-      <ion-item class="item item-icon-left"><i class="icon ion-ios-list-outline"></i> : Description</ion-item>
-      <p>
-        {{event.descr}}
-      </p>
-      <ion-item class="item item-icon-left"><i class="icon ion-ios-list-outline"></i> : AGENDA (click to download)</ion-item>
-      <button ng-show="agenda" ng-click="download(downloadUrl)">{{filename}}</button>
-      </ion-list>
-      <form ng-show="upload" id="uploadForm" method="post">
-      <input type = "file">
-      <input type="submit" class="button button-positive small_button" value="OK">
+      <ion-item class="item item-icon-left"><i class="icon ion-ios-list-outline"></i> : AGENDA</ion-item>
+    </ion-list>
+    <!-- Form to add agenda -->
+      <form name="addAgendaForm" ng-submit="addingAgenda(ag)" ng-show="addingAgendaForm" novalidate>
+        <!-- input type time is not supported by firefox. However, in phone, it works well -->
+        <div class="list">
+          <div class="item item-divider" align="center">New Agenda Information</div>
+        </div>
+        <label class="item item-input">
+          <span class="input-label fixed">Begin</span>
+          <input type="time" ng-model="ag.begin" required>
+        </label>
+        <label class="item item-input">
+          <span class="input-label fixed">End</span>
+          <input type="time" ng-model="ag.end" required>
+        </label>
+        <label class="item item-input">
+          <span class="input-label fixed">Speaker</span>
+          <input type="text" ng-model="ag.speaker" required>
+        </label>
+        <label class="item item-input">
+          <span class="input-label fixed">Topic</span>
+          <textarea rows="3" ng-model="ag.topic" required></textarea>
+        </label>
+        <div class="button-bar">
+          <button type="submit" class="button button-block button-balanced" ng-disabled="addAgendaForm.$invalid">Submit</button>
+          <button type="reset" class="button button-block button-stable">Clear Fields</button>
+        </div>
       </form>
-     <button ng-click="upload = !upload" ng-show="upload" class="button button-block button-assertive">Cancel</button>
-      <button ng-click="upload = !upload" ng-show="!upload && !agenda" class="button button-block button-positive">Add agenda</button>
-    <button ng-click="upload = !upload" ng-show="!upload && agenda" class="button button-block button-positive">Change agenda</button>
+      <!-- button to show add new agenda -->
+      <button class="button button-block button-positive" ng-show="isLoggedIn"
+             ng-click="showAddingAgenda(); changeButton()">{{myButton}}</button>
+    <!-- Agenda List listed by beginning time -->
+    <div class="card" ng-repeat="i in agendaList | orderBy: 'begin': false">
+      <div class = "item item-text-wrap">
+      <b>From</b> {{i.begin | date: 'HH:mm' || "n/a"}} <b>to</b> {{i.end | date: 'HH:mm' || "n/a"}}<br>
+      <b>Speaker</b>: {{i.speaker || "n/a"}}<br>
+      <b>Topic</b>: {{i.topic || "n/a"}}<br>
+    </div>
+    </div>
+    <div>
+      {{event.descr}}
+    </div>
   </ion-content>
 </ion-view>
