--- a/MyConference/www/templates/login.html
+++ b/MyConference/www/templates/login.html
@@ -39,9 +39,8 @@ If not, see http://www.gnu.org/licenses/agpl-3.0.html.
 
 
       <div class="col text-right">
-        <a href="#/app/forgotPassword" class="button button-clear button-calm" >Forgot my password ?</a>
+        <a href="" class="button button-clear button-light">Forgot my password ?</a>
       </div>
-
 
       </br>
 
