--- a/MyConference/www/templates/my-account.html
+++ b/MyConference/www/templates/my-account.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-nav-title>{{user.username}}</ion-nav-title>
   <ion-nav-buttons side="right">
-    <button ng-click="goToEdit()" class="button icon ion-edit" menu-toggle="right"></button>
+    <buttom ng-click="goToEdit()" class="button icon ion-edit" menu-toggle="right"></buttom>
   </ion-nav-buttons>
   <ion-content>
     <ion-list>
