--- a/MyConference/www/templates/register.html
+++ b/MyConference/www/templates/register.html
@@ -20,10 +20,9 @@ If not, see http://www.gnu.org/licenses/agpl-3.0.html.
         <form name="userForm" ng-submit="createAccount(user)" novalidate>
         <ion-list>
 
-        <label class="item item-input">
-            <span class="input-label">Email</span>
-            <input type="email" name="email" class="form-control" ng-model="user.email" ng-pattern="/[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/" required>
-            <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block"> WRONG! Email form: name@domain.com </p>
+          <label class="item item-input">
+            <span class="input-label fixed">Username</span>
+            <input type="text" name="first_name" ng-model="user.username" required>
           </label>
 
           <label class="item item-input">
@@ -36,6 +35,11 @@ If not, see http://www.gnu.org/licenses/agpl-3.0.html.
             <input type="text" name="given_name" ng-model="user.gName" required>
           </label>
 
+          <label class="item item-input">
+            <span class="input-label">Email</span>
+            <input type="email" name="email" class="form-control" ng-model="user.email" ng-pattern="/[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/" required>
+            <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block"> WRONG! Email form: name@domain.com </p>
+          </label>
 
           <label class="item item-input">
 
